--- a/_includes/widgets/head.njk
+++ b/_includes/widgets/head.njk
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% include "widgets/seo.njk" %}
-<link rel="icon" type="image/svg+xml" href="{{ cover or metadata.cover }}">
+<link rel="icon" type="image/svg+xml" href="{{ cover or metadata.favicon }}">
 <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
 <link rel="stylesheet" href="{{ '/css/grandlimousine.css' | url }}">
 <meta name="generator" content="{{ eleventy.generator }}">
