--- a/css/grandlimousine.css
+++ b/css/grandlimousine.css
@@ -2,7 +2,7 @@ a {
   text-decoration: none;
   color: black;
 }
-.cover {
+.cover {/*
   -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
+  filter: grayscale(100%);*/
 }
