--- a/_includes/widgets/head.njk
+++ b/_includes/widgets/head.njk
@@ -10,4 +10,6 @@
 <meta name="generator" content="{{ eleventy.generator }}">
 <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
 <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
+<link rel='stylesheet' href='https://unpkg.com/aos@2.3.0/dist/aos.css'>
+<script src='https://unpkg.com/aos@2.3.0/dist/aos.js'></script>
 </head>
