--- a/_includes/widgets/content.njk
+++ b/_includes/widgets/content.njk
@@ -5,5 +5,11 @@
 <main>{{ content | safe }}</main>
 {% include "widgets/footer.njk" %}
 </div>
+
+<script>
+AOS.init({
+  duration: 1200 });
+</script>
+
 </body>
 </html>
