--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 templateClass: tmpl-post
 ---
 <div class="row">
-<div class="col-md-4 p-3">cek
+<div class="col-md-4 p-3"><kbd>post.njk</kbd>
  {% if cover %}<img class="img-fluid cover" width="100%" height="100%" alt="{{metadata.title}} {{ title }}" loading="lazy" src="{{ cover }}"/>{% endif %}
 </div>
 <div class="col-md-8 p-3">
