--- a/_includes/widgets/header.njk
+++ b/_includes/widgets/header.njk
@@ -3,7 +3,7 @@
 <h1><strong><a href="{{ '/' | url }}" title="{{metadata.title}}">{{metadata.title}}</a></strong></h1>
 <h2>{{metadata.description}}</h2>
 </div>
-<div class="col-md-6">
+<div class="col-md-6"><kbd>widget/header.njk</kbd>
 <img class="img-fluid cover" alt="{{metadata.title}}" width="100%" height="100%" loading="lazy" src="{{metadata.cover}}"/>
 </div>
 </div>
