--- a/page-list.njk
+++ b/page-list.njk
@@ -6,6 +6,7 @@ pagination:
 layout: layouts/home.njk
 permalink: /page-list/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber }}/{% endif %}
 ---
+<kbd>page-list.njk</kbd>
 <table>
   <thead>
     <tr>
