--- a/_includes/widgets/header.njk
+++ b/_includes/widgets/header.njk
@@ -1,9 +1,9 @@
-<div class="row mt-3 border-bottom">
+<div class="row mt-3 border-bottom"><code>widget/header.njk</code>
 <div class="col-md-6 p-3 p-m-5">
 <h1><strong><a href="{{ '/' | url }}" title="{{metadata.title}}">{{metadata.title}}</a></strong></h1>
 <h2>{{metadata.description}}</h2>
 </div>
-<div class="col-md-6"><kbd>widget/header.njk</kbd>
+<div class="col-md-6">
 <img class="img-fluid cover" alt="{{metadata.title}}" width="100%" height="100%" loading="lazy" src="{{metadata.cover}}"/>
 </div>
 </div>
