--- a/_includes/widgets/nav.njk
+++ b/_includes/widgets/nav.njk
@@ -1,5 +1,5 @@
 <header class="row border-bottom">
-<div class="col-md-4 p-1 col-4">
+<div class="col-md-4 p-1 col-4"><code>nav.njk</kbd>
 <p><strong><a href="{{ '/' | url }}" class="navbar-brand">{{ metadata.logo }}</a></strong></p>
 </div>
 <ul class="nav col-md-8 col-8 p-1 justify-content-end">
