--- a/_includes/widgets/nav.njk
+++ b/_includes/widgets/nav.njk
@@ -1,6 +1,6 @@
 <header class="row border-bottom">
-<div class="col-md-4 p-1 col-4"><code>nav.njk</kbd>
-<p><strong><a href="{{ '/' | url }}" class="navbar-brand">{{ metadata.logo }}</a></strong></p>
+<div class="col-md-4 p-1 col-4">
+<p><strong><a href="{{ '/' | url }}" class="navbar-brand">{{ metadata.logo }}</a></strong> <code>nav.njk</kbd></p>
 </div>
 <ul class="nav col-md-8 col-8 p-1 justify-content-end">
 <li class="nav-link"><a href="https://beni.website" class="btn btn-outline-dark btn-sm">Hire Me</a></li>
