--- a/_includes/widgets/content.njk
+++ b/_includes/widgets/content.njk
@@ -2,7 +2,7 @@
 <div class="container">
 {% include "widgets/nav.njk" %}
 {% include "widgets/header.njk" %}
-<main><kbd>content.njk</kbd>{{ content | safe }}</main>
+<main><kbd>content.njk</kbd></main>
 {% include "widgets/footer.njk" %}
 </div>
 
